--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-router-dom": "^4.2.2",
     "recharts": "^1.0.0-beta.10",
     "redux": "^4.0.0",
+    "redux-form": "^7.3.0",
     "redux-saga": "^0.16.0",
     "reselect": "^3.0.1",
     "resolve": "1.6.0",
